# rapid-scheme

./: .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  Makefile  Makefile.am  NEWS  README  README-hacking  _config.yml  about.md  bootstrap.conf  configure.ac  letsencrypt-setup.html  rapid-compiler.scm  rapid-scheme  rapid-scheme.scm  tests.scm
_posts/: 2016-07-05-rapid-scheme-0.1.0.markdown  (+9 more)
common/: gc.c  (+2 more)
librapid/: .gitignore  Makefile.am  local-symbols.s  rapid_gc.c  rapid_main.s
src/compiler/: .gitignore  Makefile.am  generate-global-symbols-file.scm  generate-local-symbols-file  generate-local-symbols-file.scm  rapid-compiler  rapid-compiler.scm  scheme
src/compiler/lib/rapid/: and-let.sld  assembler.instructions.scm  assembler.registers.scm  assembler.scm  assembler.sld  base.sld  binary.scm  binary.sld  bind-procedures.scm  bind-procedures.sld  box.sld  boxes.scm  closure-convert.scm  closure-convert.sld  codegen.scm  codegen.sld  comparator.scm  comparator.sld  comparators.scm  comparators.sld  cps-transform.scm  cps-transform.sld  digraph.scm  digraph.sld  elf.scm  elf.sld  error.sld  expand-library.scm  expand-library.sld  expand.sld  expressions.scm  expressions.sld  features.scm.in  features.sld  fix-letrec.scm  fix-letrec.sld  gas.scm  gas.sld  generator.sld  generators.scm  (+58 more)
src/compiler/lib/rapid/and-let/: test.sld
src/compiler/lib/rapid/args-fold/: test.sld
src/compiler/lib/rapid/assembler/: test.sld
src/compiler/lib/rapid/binary/: test.sld
src/compiler/lib/rapid/bind-procedures/: test.sld
src/compiler/lib/rapid/box/: test.sld
src/compiler/lib/rapid/boxes/: test.sld
src/compiler/lib/rapid/closure-convert/: test.sld
src/compiler/lib/rapid/codegen/: test.sld
src/compiler/lib/rapid/comparator/: test.sld
src/compiler/lib/rapid/compiler/: assign-registers.scm  assign-registers.sld  call-graph.scm  call-graph.sld  closure-convert.scm  closure-convert.sld  compile.scm  compile.sld  environment.scm  environment.sld  free-variables.scm  free-variables.sld  generate-module.scm  generate-module.sld  identifier.scm  identifier.sld  mark-escaping-procedures.scm  mark-escaping-procedures.sld  mark-free-variables.scm  mark-free-variables.sld  parallel-move.scm  parallel-move.sld  partition-bindings.scm  partition-bindings.sld  procedure-store.scm  procedure-store.sld  spill-registers.scm  spill-registers.sld  syntax.scm  syntax.sld
src/compiler/lib/rapid/compiler/backend/: assembler.instructions.scm  assembler.registers.scm  assembler.scm  assembler.sld  codegen.scm  codegen.sld  gas.scm  gas.sld  machine-language.scm  machine-language.sld  module.scm  module.sld  object-file.scm  object-file.sld  runtime.global-symbols.scm  runtime.local-symbols.scm  runtime.scm  runtime.sld
src/compiler/lib/rapid/compiler/backend/assembler/: test.sld
src/compiler/lib/rapid/compiler/backend/codegen/: test.sld
src/compiler/lib/rapid/compiler/backend/object-file/: test.sld
src/compiler/lib/rapid/compiler/closure-convert/: test.sld
src/compiler/lib/rapid/compiler/free-variables/: #test.sld#  .#test.sld  test.sld
src/compiler/lib/rapid/compiler/generate-module/: test.sld
src/compiler/lib/rapid/compiler/identifier/: test.sld
src/compiler/lib/rapid/compiler/mark-escaping-procedures/: test.sld
src/compiler/lib/rapid/compiler/mark-free-variables/: test.sld
src/compiler/lib/rapid/compiler/parallel-move/: test.sld
src/compiler/lib/rapid/compiler/partition-bindings/: test.sld
src/compiler/lib/rapid/compiler/syntax/: test.sld
src/compiler/lib/rapid/cps-transform/: test.sld
src/compiler/lib/rapid/digraph/: test.sld
src/compiler/lib/rapid/elf/: test.sld
src/compiler/lib/rapid/expand-library/: test.sld
src/compiler/lib/rapid/expressions/: test.sld
src/compiler/lib/rapid/features/: test.sld
src/compiler/lib/rapid/fix-letrec/: test.sld
src/compiler/lib/rapid/generator/: test.sld
src/compiler/lib/rapid/graph/: test.sld
src/compiler/lib/rapid/identifiers/: test.sld
src/compiler/lib/rapid/imap/: test.sld
src/compiler/lib/rapid/immutable-maps/: test.sld
src/compiler/lib/rapid/immutable-sets/: test.sld
src/compiler/lib/rapid/import-sets/: test.sld
src/compiler/lib/rapid/introduce-let/: test.sld
src/compiler/lib/rapid/iset/: test.sld
src/compiler/lib/rapid/lambda-lift/: test.sld
src/compiler/lib/rapid/library-definitions/: test.sld
src/compiler/lib/rapid/list/: test.sld
src/compiler/lib/rapid/list-queues/: test.sld
src/compiler/lib/rapid/map/: test.sld
src/compiler/lib/rapid/match/: test.sld
src/compiler/lib/rapid/mutable-variable-eliminate/: test.sld
src/compiler/lib/rapid/object-file/: test.sld
src/compiler/lib/rapid/parameter-objects/: test.sld
src/compiler/lib/rapid/primitive-environment/: test.sld
src/compiler/lib/rapid/read/: test.sld
src/compiler/lib/rapid/receive/: test.sld
src/compiler/lib/rapid/records/: test.sld
src/compiler/lib/rapid/set/: test.sld
src/compiler/lib/rapid/sort/: test.sld
src/compiler/lib/rapid/syntactic-environments/: test.sld
src/compiler/lib/rapid/syntax/: test.sld
src/compiler/lib/rapid/test/: test.sld
src/runtime/: .gitignore  Makefile.am  rapid-scheme.scm
src/runtime/lib/: rapid.scm  rapid.sld
src/runtime/lib/rapid/: primitives.scm  runtime.sld
src/runtime/lib/scheme/: base.sld  cxr.sld  lazy.sld  load.sld  read.sld  repl.sld  time.sld
tests/: .gitignore  Makefile.am  alloc.scm  apply.ok  apply.tst  assignment.tst  call-with-current-continuation.tst  compiler.scm  continuation-marks.ok  continuation-marks.tst  define-record-type.ok  define-record-type.tst  dump.scm  gauss.scm  gc.c  gc_dump.c  gc_util.c  gc_util.h  hello-world.s  hello-world.scm  hello-world.tst  macros.h  module-compiler.scm  multiple-values.ok  multiple-values.tst  procedure-assignment.tst  procedure.tst  simple.scm  simple_module.scm  tests.scm
tests/runtime/: Makefile.am  ellipsis.ok  ellipsis.tst  hello-world.tst  lib.sld  literals.tst  macro1.ok  macros.scm  meaning.ok  r7rs-tests.scm  read.tst  set.ok  set.tst  syntax-error.ok  syntax-error.tst  test.scm  test2.scm
(+158 files in other folders)
